@@ -7,7 +7,7 @@ use English;
 use Error::Pure::Utils qw(clean);
 use File::Object;
 use File::Spec::Functions qw(abs2rel);
-use Test::More 'tests' => 20;
+use Test::More 'tests' => 23;
 use Test::NoWarnings;
 use Test::Output;
 use Test::Warn;
@@ -26,7 +26,34 @@ stderr_is(
 		return;
 	},
 	$right_ret,
-	'Run help.',
+	'Run help (-h).',
+);
+
+# Test.
+@ARGV = ();
+$right_ret = help();
+stderr_is(
+	sub {
+		App::Pod::Example->new->run;
+		return;
+	},
+	$right_ret,
+	'Run help (no arguments).',
+);
+
+# Test.
+@ARGV = (
+	'-x',
+);
+$right_ret = help();
+stderr_is(
+	sub {
+		warning_is { App::Pod::Example->new->run; } "Unknown option: x\n",
+			'Warning about bad argument';
+		return;
+	},
+	$right_ret,
+	'Run help (-x - bad option).',
 );
 
 # Test.
